--- a/index.html
+++ b/index.html
@@ -5,6 +5,63 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>History of French Cinema</title>
     <link rel="stylesheet" href="styles.css">
+    <style> body {
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+        background: url('https://cdn.britannica.com/14/181214-050-FDBCB42C/Studio-Artist-canvas-oil-easel-Gustave-Courbet.jpg') no-repeat center center fixed;
+        background-size: cover; /* Ensure the image covers the entire page */
+        color: #333;
+    }
+
+    header {
+        text-align: center;
+        background: rgba(0, 0, 0, 0.7); /* Semi-transparent black background for readability */
+        color: #fff;
+        padding: 20px 0;
+    }
+
+    header h1 {
+        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        margin: 0;
+    }
+
+    main {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        padding: 20px;
+    }
+
+    .box {
+        background: rgba(255, 255, 255, 0.9); /* Semi-transparent white for box backgrounds */
+        margin: 15px;
+        padding: 20px;
+        border-radius: 8px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        max-width: 300px;
+        text-align: center;
+        transition: transform 0.3s ease-in-out; /* Smooth transition for hover effects */
+    }
+
+    .box:hover {
+        transform: scale(1.05); /* Slight zoom-in effect on hover */
+        box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2); /* Stronger shadow on hover */
+    }
+
+    .box img {
+        width: 100%;
+        height: auto;
+        border-radius: 8px;
+    }
+
+    footer {
+        text-align: center;
+        padding: 10px 0;
+        background: rgba(0, 0, 0, 0.7); /* Semi-transparent black */
+        color: #fff;
+        margin-top: 20px;
+    } </style>
 </head>
 <body>
     <a href="history_of_french_cinema_(group-8)/index.html"></a>
